# PLATON-OSS

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PERFORMANCE.md  README.md  ROADMAP.md  SECURITY.md  UNSAFE.md  docker-compose.yaml  ini.sql  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: isa.md
docs/ADR/: ADR-001-two-crate-workspace.md  ADR-002-value-as-enum.md  ADR-003-isa-provider-trait.md  ADR-004-fat-pointer-protocol.md  ADR-005-registry-ptr-as-raw-pointer.md  ADR-006-vmstate-send-sync.md  ADR-007-conector-namespaces.md  ADR-008-bytecode-loader.md  ADR-009-pyo3-exception-hierarchy.md  ADR-010-debug-trace.md  ADR-011-stack-machine-architecture.md  ADR-012-avbc-binary-format.md  ADR-013-dual-execution-limits.md  ADR-014-release-profile-optimization.md  ADR-015-maturin-build-backend.md  ADR-016-isa-error-as-string.md  ADR-017-try-stack-exception-model.md  ADR-018-native-registry-u32-dispatch.md  ADR-019-vmproxy-call-ext-interface.md  README.md
docs/PRD/: PRD-001-platon-kernel.md
docs/RFCS/: RFC-001-store-cvar-store-result.md
docs/SPEC/: bytecode-format.md  isa-contract.md  value-types.md  vm-execution-model.md
integration/: basic_use.py  tornado_integration.py
platon-core/: Cargo.toml
platon-core/src/: lib.rs  tests.rs
python/platon/: __init__.py
scripts/: init_db.sql
src/: lib copy.rs  lib.rs
src/platon/: compiler.py  exceptions.py  opcodes.py  registry.py  values.py  vm.py
src/platon/server/: app.py
tests/: init_test_db.py  test_vm.py
(+1 files in other folders)
