[workspace]
members = ["platon-core", "."]
resolver = "2"

[package]
name = "platon"
version = "0.3.0"
edition = "2021"
description = "Language-agnostic virtual machine kernel"
license = "MIT"

[lib]
name = "platon"
crate-type = ["cdylib", "rlib"]

[dependencies]
platon-core = { path = "platon-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true