[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "platon"
version = "0.3.0"
description = "Language-agnostic virtual machine kernel"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "maturin>=1.5"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
